Add average age of all players to show page

--- a/app/views/competitions/show.html.erb
+++ b/app/views/competitions/show.html.erb
@@ -5,3 +5,5 @@
 <% @competition.teams.each do |team| %>
   <p><%= team.nickname %> from <%= team.hometown %></p>
 <% end %>
+
+<p>Average Player Age: <%= @competition.average_age_of_all_players %></p>
